src/test/ui/lub-glb/old-lub-glb-hr-noteq1.nll.stderr
error[E0308]: mismatched types
  --> $DIR/old-lub-glb-hr-noteq1.rs:11:14
   |
LL |         _ => y,
   |              ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r u8, &'s u8) -> &'r u8`
              found fn pointer `for<'r> fn(&'r u8, &'r u8) -> &'r u8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
